--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-fastapi
-uvicorn[standard]
-tensorflow==2.19.0
-pandas==2.3.0
-numpy==2.1.3
-scikit-learn==1.7.0
-transformers==4.52.4
-joblib==1.5.1
-torch==2.7.1+cpu
-sentencepiece
+fastapi==0.115.1
+uvicorn[standard]==0.29.0
+tensorflow==2.15.0
+torch==2.2.2
+pandas==2.2.1
+numpy==1.26.4
+scikit-learn==1.4.2
+transformers==4.40.1
+joblib==1.3.2
