--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,10 @@
-fastapi==0.115.1
-uvicorn[standard]==0.29.0
-
-# Versi TensorFlow yang lebih aman (lebih kecil & stabil di Render)
-tensorflow==2.11.0
-
-# Torch versi CPU minimal agar lebih ringan
-torch==2.1.2+cpu
---find-links https://download.pytorch.org/whl/cpu/torch_stable.html
-
-# Data science libraries
-pandas==2.2.1
-numpy==1.26.4
-scikit-learn==1.4.2
-joblib==1.3.2
-
-# Transformers versi stabil & relatif ringan
-transformers==4.40.1
+fastapi
+uvicorn[standard]
+tensorflow
+pandas
+numpy
+scikit-learn
+transformers
+joblib
+torch
+sentencepiece
